# scxml-tests

qt-scxml-basic/: CMakeLists.txt  main-qthread.cpp  main.cpp
qt-scxml-timers/: CMakeLists.txt  MyStateMachine.scxml  main.cpp
qt-test-basic/: MyStateMachine.scxml  main.cpp
